Expose all stop names for departures UI use case
